[package]
name = "verify-poh-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.16.0"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic_principal = "0.1.1"
ic-verifiable-credentials = "1.0.1"
getrandom = { version = "0.2.15", features = ["custom"] }
serde = "1.0.210"
